--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_RECETAS=http://localhost:4001/recetas
+VITE_API_RECETAS=http://localhost:4001/api/recetas
 VITE_API_RECETA=http://localhost:4001/api/receta
 VITE_API_USUARIOS=http://localhost:4001/api/usuarios
