configure lo necesario para vercel, arregle el readme y agregue el _redirects para netlify

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_RECETAS=http://localhost:4001/api/recetas
-VITE_API_RECETA=http://localhost:4001/api/receta
-VITE_API_USUARIOS=http://localhost:4001/api/usuarios
+VITE_API_RECETAS=https://backend-punto5-santamarina.vercel.app/api/recetas
+VITE_API_RECETA=https://backend-punto5-santamarina.vercel.app/api/receta
+VITE_API_USUARIOS=https://backend-punto5-santamarina.vercel.app/api/usuarios
